--- a/src/stylesheets/fonts.scss
+++ b/src/stylesheets/fonts.scss
@@ -1,4 +1,8 @@
 @font-face {
+  font-family: 'ADC';
+  src: url('fonts/ADC-Semi-Bold.otf') format('opentype');
+}
+@font-face {
   font-family: 'PT Root UI';
   src: url('fonts/PT-Root-UI_Light.woff2') format('woff2'),
     url('fonts/PT-Root-UI_Light.woff') format('woff');
