--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -1,45 +1,17 @@
-// body.index {
-//   display: flex;
-//   flex-direction: column;
-//   justify-content: center;
-//   align-items: center;
-//
-//    > div,
-//    > a {
-//     margin: 10px 0;
-//   }
-// }
 body.index {
   margin: 0 auto;
+  background: #1A1A1A;
 
-  h1 {
-    max-width: 924px;
-    text-align: left;
-    margin: 20px auto;
-    font-family: 'ADC-Semi-Bold';
-    font-size: 36px;
-  }
-  .cards {
-    max-width: 924px;
+  .words {
+    max-width: 968px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     align-content: center;
-    margin: 0 auto;
+    margin: 20px auto;
     gap: 4px 4px;
   }
-  .card {
-    width: 100%;
-    /* height: 500px; */
-    background: grey;
-    /* margin: 4px; */
-    cursor: pointer;
-    background-size: 100% auto;
-    background-repeat: no-repeat;
-    vertical-align: top;
-    padding-bottom: 177.8%;
-    box-sizing: border-box;
-    position: relative;
 
+  .word {
     a {
       display: block;
       position: absolute;
@@ -49,64 +21,31 @@ body.index {
       height: 100%;
     }
   }
-  .n1 {
-    background-image: url('./images/CJM.png');
-  }
-  .n2 {
-    background-image: url('./images/custdev.png');
-  }
-  .n3 {
-    background-image: url('./images/figma.png');
-  }
-  .n4 {
-    background-image: url('./images/guerrilla-marketing.png');
-  }
-  .n5 {
-    background-image: url('./images/illustrator.png');
-  }
-  .n6 {
-    background-image: url('./images/Indesign.png');
-  }
-  .n7 {
-    background-image: url('./images/JTBD-1.png');
-  }
-  .n8 {
-    background-image: url('./images/JTBD.png');
-  }
-  .n9 {
-    background-image: url('./images/KPI.png');
-  }
-  .n10 {
-    background-image: url('./images/newsjacking.png');
-  }
-  .n11 {
-    background-image: url('./images/photoshop.png');
-  }
-  .n12 {
-    background-image: url('./images/readymag.png');
-  }
-  .n13 {
-    background-image: url('./images/situational-marketing.png');
-  }
-  .n14 {
-    background-image: url('./images/sketch.png');
-  }
-  .n15 {
-    background-image: url('./images/soft.png');
-  }
-  .n16 {
-    background-image: url('./images/tilda.png');
-  }
-  .n17 {
-    background-image: url('./images/userstories.png');
-  }
-  .n18 {
-    background-image: url('./images/UTP.png');
+
+  & > h1 {
+    font-family: 'ADC';
+    font-weight: 600;
+    font-size: 24px;
+    text-transform: uppercase;
+    line-height: 28px;
+    color: white;
+    max-width: 968px;
+    margin: 20px auto;
   }
 }
 
-@media all and (max-device-width: 1280px) {
-  .h1 {
-    font-size: 18px;
+@media all and (min-device-width: 430px) and (max-device-width: 768px) {
+  body.index {
+    .words {
+      max-width: 648px;
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
+}
+@media all and (max-device-width: 430px) {
+  body.index {
+    .words {
+      grid-template-columns: repeat(1, 1fr);
+    }
   }
 }
