--- a/src/stylesheets/vars.scss
+++ b/src/stylesheets/vars.scss
@@ -1,4 +1,10 @@
 :root {
   --white: white;
   --black: black;
+  --dark-grey: #262626;
+  --medium-grey: #8d8d8d;
+  --grey: #c5c5c5;
+  --light-grey: #cfcfcf;
+  --acid-green: #79ff39;
+  --dark-green: #00ff29;
 }
