--- a/src/partials/analytics.html
+++ b/src/partials/analytics.html
@@ -1,1 +1,12 @@
-<!-- There should be your analytics script -->
+<script
+  async
+  src="https://www.googletagmanager.com/gtag/js?id=G-XTC8NHHHJ3"
+></script>
+<script>
+  window.dataLayer = window.dataLayer || []
+  function gtag() {
+    dataLayer.push(arguments)
+  }
+  gtag('js', new Date())
+  gtag('config', 'G-XTC8NHHHJ3')
+</script>
