--- a/src/stylesheets/basics.scss
+++ b/src/stylesheets/basics.scss
@@ -4,7 +4,7 @@
 
 html,
 body {
-  height: 100%;
+  min-height: 100%;
 }
 
 body {
@@ -12,26 +12,31 @@ body {
   font-weight: 400;
 }
 
-.images {
-  display: flex;
+.menubar {
+  padding: 20px 0;
 
-  * {
-    width: 24px;
-    height: 24px;
-    margin: 0 10px;
+  .home {
+    display: block;
+    width: 50px;
+    height: 50px;
+    margin: 0 auto;
+    background-image: url('images/ADC-Symbol.svg');
+    background-size: cover;
   }
+}
 
-  .image {
-    &#bgPNG {
-      background-image: url('images/image.png');
-    }
+.footerbar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 60px;
 
-    &#bgJPG {
-      background-image: url('images/image.jpg');
-    }
+  a {
+    text-decoration: none;
+    color: var(--medium-grey);
 
-    &#bgSVG {
-      background-image: url('images/image.svg');
+    &:hover {
+      color: var(--acid-green);
     }
   }
 }
