--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -1,14 +1,24 @@
 body.index {
+  // display: flex;
+  // justify-content: center;
+  // align-items: center;
   margin: 0 auto;
-  background: #1A1A1A;
+  // padding: 100px 0 ;
+  background: #1a1a1a;
+
+  h1 {
+    text-align: center;
+    margin: 0 auto;
+    padding: 30px 0 24px;
+  }
 
   .words {
-    max-width: 968px;
+    max-width: 984px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     align-content: center;
-    margin: 20px auto;
-    gap: 4px 4px;
+    margin: 0 auto;
+    gap: 12px 12px;
   }
 
   .word {
@@ -34,7 +44,7 @@ body.index {
   }
 }
 
-@media all and (min-device-width: 430px) and (max-device-width: 768px) {
+@media all and (min-width: 700px) and (max-width: 1023px) {
   body.index {
     .words {
       max-width: 648px;
@@ -42,7 +52,8 @@ body.index {
     }
   }
 }
-@media all and (max-device-width: 430px) {
+
+@media all and (max-width: 700px) {
   body.index {
     .words {
       grid-template-columns: repeat(1, 1fr);
