--- a/src/partials/ogmeta.html
+++ b/src/partials/ogmeta.html
@@ -5,10 +5,10 @@
 <meta property="og:url" content="https://adc.ac">
 <meta property="og:title" content="Словарь Дипфейса">
 <meta property="og:description" content="Термины из дизайна, программирования и продвижения">
-<meta property="og:image" content="https://adc.ac/share/share.png">
+<meta property="og:image" content="https://dictionary.adc.ac/share/share.png">
 
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://adc.ac">
 <meta property="twitter:title" content="Словарь Дипфейса">
 <meta property="twitter:description" content="Термины из дизайна, программирования и продвижения">
-<meta property="twitter:image" content="https://adc.ac/share/share.png">
+<meta property="twitter:image" content="https://dictionary.adc.ac/share/share.png">
