--- a/src/partials/ogmeta.html
+++ b/src/partials/ogmeta.html
@@ -2,13 +2,13 @@
 <meta name="description" content="Термины из дизайна, программирования и продвижения">
 
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://adc.ac">
+<meta property="og:url" content="https://dictionary.adc.ac">
 <meta property="og:title" content="Словарь Дипфейса">
 <meta property="og:description" content="Термины из дизайна, программирования и продвижения">
 <meta property="og:image" content="https://dictionary.adc.ac/share/share.png">
 
 <meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="https://adc.ac">
+<meta property="twitter:url" content="https://dictionary.adc.ac">
 <meta property="twitter:title" content="Словарь Дипфейса">
 <meta property="twitter:description" content="Термины из дизайна, программирования и продвижения">
 <meta property="twitter:image" content="https://dictionary.adc.ac/share/share.png">
